[package]
name = "sanctum-ai"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["SanctumAI"]
description = "Rust SDK for SanctumAI — credential management for AI agents"
repository = "https://github.com/jwgale/sanctum-sdk-rust"
homepage = "https://sanctumai.dev"
license = "MIT"
keywords = ["ai", "agents", "credentials", "security", "mcp"]
categories = ["authentication", "api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
thiserror = "2"
hex = "0.4"
rand = "0.8"
